--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "readline-char",
-  "version": "1.1.0",
-  "description": "",
+  "version": "1.1.1",
+  "description": "Raw commandline input handler",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "homepage": "https://github.com/ulrich-barnstedt/readline-char"
 }
